--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,35 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ContactBook"
+             xmlns:vm="clr-namespace:ContactBook.ViewModels"
+             xmlns:views="clr-namespace:ContactBook.Views"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <!--ViewModel Views connections-->
+            <DataTemplate DataType="{x:Type vm:SelectedContactViewModel}">
+                <views:SelectedContactView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:ContactListViewModel}">
+                <views:ContactListView/>
+            </DataTemplate>
+        <SolidColorBrush x:Key="Outline" Color="#938F99"/>
+        <SolidColorBrush x:Key="Outline Variation" Color="#49454F"/>
+        <SolidColorBrush x:Key="Inverse Surface" Color="#E6E0E9"/>
+        <SolidColorBrush x:Key="On Surface" Color="#E6E0E9"/> 
+        <SolidColorBrush x:Key="On Surface Variation" Color="#CAC4D0"/>
+        <SolidColorBrush x:Key="Inverse On Surface" Color="#322F35"/>
+        <SolidColorBrush x:Key="Surface Dim" Color="#141218"/>
+        <SolidColorBrush x:Key="Surface" Color="#141218"/>
+        <SolidColorBrush x:Key="Surface Bright" Color="#3B383E"/>
+        <SolidColorBrush x:Key="Surface Container Lowest" Color="#0F0D13"/>
+        <SolidColorBrush x:Key="Surface Container Low" Color="#1D1B20"/>
+        <SolidColorBrush x:Key="Surface Container" Color="#211F26"/>
+        <SolidColorBrush x:Key="Surface Container High" Color="#2B2930"/>
+        <SolidColorBrush x:Key="Surface Container Highest" Color="#36343B"/>
+
+
+        <FontFamily x:Key="Roboto">pack://application:,,,/Fonts/Roboto/#Roboto</FontFamily>
+        
+        
     </Application.Resources>
 </Application>
