--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -4,9 +4,87 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ContactBook"
+        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:vm="clr-namespace:ContactBook.ViewModels"
+        xmlns:components="clr-namespace:ContactBook.Views.Components"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        d:DataContext="{d:DesignInstance vm:MainViewModel}"
+        WindowStyle="None"
+        AllowsTransparency="True"
+        Background="Transparent"
+        ResizeMode="CanResize"
+        MouseDown="MoveWindow"
+        SizeChanged="HasSizeChanged"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Margin="10,10" Width="30" Height="20" Click="Button_Click"/>
-    </Grid>
+        x:Name="main"
+        Title="MainWindow" MinHeight="600" MinWidth="800">
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="15"/>
+    </WindowChrome.WindowChrome>
+    <Border Background="{DynamicResource Surface Container Lowest}" BorderBrush="{DynamicResource Outline Variation}" BorderThickness="1" CornerRadius="6" ClipToBounds="True">
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="45"/>
+                <RowDefinition Height="1"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="269*"/>
+
+            </Grid.ColumnDefinitions>
+
+            <Border Grid.ColumnSpan="3" Background="{DynamicResource Surface Container Low}"
+                       CornerRadius="5,5,0,0" PreviewMouseLeftButtonDown="InitiateWindowResize"/>
+
+            <ContentControl Content="{Binding ContactListViewModel}" 
+                    Grid.Column="1" Grid.Row="2">
+                <ContentControl.Effect>
+                    <DropShadowEffect Color="DimGray" Direction="180" BlurRadius="2" ShadowDepth="2"/>
+                </ContentControl.Effect>
+            </ContentControl>
+
+            <ContentControl Content="{Binding CurrentViewModel}"
+                Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"/>
+            
+            <Rectangle Fill="{DynamicResource Outline Variation}" Grid.ColumnSpan="3" Grid.Row="1" RadiusY="2">
+                <Rectangle.Effect>
+                    <DropShadowEffect/>
+                </Rectangle.Effect>
+
+            </Rectangle>
+
+
+            <components:SearchBar Grid.Column="1" 
+                                  HorizontalAlignment="Center"  
+                                  VerticalAlignment="Center" 
+                                  Height="30" Width="226"
+                                  PreviewKeyDown="InitiateSearch"/>
+
+
+            <StackPanel Grid.Column="2" 
+                        Orientation="Horizontal"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Right"
+                        Margin="373,0,0,0"  
+                        Height="45"
+                        
+                        WindowChrome.IsHitTestVisibleInChrome="True"  Width="135">
+
+                <components:IconButton IconKind="MinusLine" IconMargin="0,8,0,0" PreviewMouseDown="MinimizeWindow" Width="45"/>
+
+                <components:IconButton IconKind="WindowMaximizeLine" PreviewMouseDown="ChangeWindowSize" Width="45"/>
+
+                <components:IconButton IconKind="TimesLine" BorderRadius="0,6,0,0" 
+                                       ActionColor="IndianRed"
+                                       PreviewMouseDown="CloseWindow" Width="45"/>
+
+            </StackPanel>
+
+
+
+        </Grid>
+    </Border>
 </Window>
